# puv-rfe-framework

./: .gitignore  Makefile  pyproject.toml  readme.md
notebooks/analyses/: supplementary_outputs.py
notebooks/analyses/bladder/: bladder_rfe_gbc.ipynb  bladder_rfe_lr-l2.ipynb  bladder_rfe_lr-np.ipynb  bladder_rfe_rf.ipynb
notebooks/analyses/renal/infants/: infants_rfe_gbc.ipynb  infants_rfe_lr-l2.ipynb  infants_rfe_lr-np.ipynb  infants_rfe_rf.ipynb
notebooks/analyses/renal/sadia/: sadia_rfe_gbc.ipynb  sadia_rfe_lr-l2.ipynb  sadia_rfe_lr-np.ipynb  sadia_rfe_rf.ipynb
notebooks/analyses/renal/sadia_nocrea/: sadia_nocrea_rfe_gbc.ipynb  sadia_nocrea_rfe_lr-l2.ipynb  sadia_nocrea_rfe_lr-np.ipynb  sadia_nocrea_rfe_rf.ipynb
notebooks/eda/bladder/: bladder_lr_creatinine-exploration.ipynb
notebooks/eda/renal/: data_checks.ipynb  infants_desc_stats.ipynb  infants_lr_creatinine-exploration.ipynb
notebooks/prep/: prep.ipynb
src/puv/: __init__.py  logging_setup.py  prep.py  visualise.py  wrangle.py
src/puv.egg-info/: PKG-INFO  SOURCES.txt
src/puv/modelling/: __init__.py  impute.py  preprocess.py  rfe.py  scaling.py  selection.py  utils.py
